# Pickleball-Vision-LLM

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  creation_result.json  environment.yml  project_structure.yaml  pyproject.toml  requirements.lock.txt  requirements.txt
.claude/docs/: DECISIONS_LOG.md  PROMPT_LIBRARY.md
.claude/skills/ship-feature/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.github/workflows/: deploy.yml
Docs/: Project LLM.md  Timeline.md  creation_result.json  optional_project_ideas.md  project
Docs/README/: README_Pickleball_Env.md
Docs/markdown/: Intro.md  Project LLM.md  optional_project_ideas.md  pitch.md
Docs/project_dir_build/: dir_create.ipynb
Docs/prompts/: project.md
Docs/week-1/: 20-hour_plan.md  Pickleball_AI_Project_Links.md  dir.md  week-1.md
app/: __init__.py  config.py  deps.py  logging_config.py  main.py  observability.py
app/app/models/: serve_model.py
app/models/: __init__.py
app/routers/: account.py  admin.py  analyze.py  auth.py  billing.py  health.py  jobs.py
app/security/: __init__.py  jwt.py
app/services/: __init__.py  dispatch.py  quota.py  repo.py  storage.py  stripe_service.py
backup/dir_backup_Pickleball-Vision-LLM/: CONTRIBUTING.md  INSTALLATION_CHECKLIST.md  Makefile
backup/dir_backup_Pickleball-Vision-LLM/deployment/: docker-compose.prod.yml
backup/dir_backup_Pickleball-Vision-LLM/scripts/: merge_files.py  organize_all.py  organize_prompts.py
backup/dir_backup_Pickleball-Vision-LLM/src/pickleball_vision/shared/config/: MLproject  pyproject.toml
backup/dir_backup_Pickleball-Vision-LLM/tests/: test_config.py
backup/docs_backup_Pickleball-Vision-LLM/: docker-compose.yml  requirements.txt  setup.py
backup/docs_backup_Pickleball-Vision-LLM/tests/: test_preprocessor.py
backup/focused_backup_Pickleball-Vision-LLM/: pytest.ini
backup/focused_backup_Pickleball-Vision-LLM/.devcontainer/: Dockerfile
backup/focused_backup_Pickleball-Vision-LLM/scripts/: README.md  cleanup_docs.py  organize_all.py  reorganize_focused.py
backup/focused_backup_Pickleball-Vision-LLM/tests/: conftest.py
backup/merge_backup_Pickleball-Vision-LLM/: Dockerfile
backup/merge_backup_Pickleball-Vision-LLM/.devcontainer/: environment.yml
backup/merge_backup_Pickleball-Vision-LLM/tests/: test_detector.py  test_embedding.py  test_vector_store.py  test_video_processor.py
backup/project_backup_Pickleball-Vision-LLM/: .gitignore  README.md
backup/project_backup_Pickleball-Vision-LLM/docs/: ball_detection_phase1.md
backup/prompts_backup_Pickleball-Vision-LLM/: README.md
backup/prompts_backup_Pickleball-Vision-LLM/docs/: ball_detection_testing.md  reorganization_plan.md
backup/prompts_backup_Pickleball-Vision-LLM/scripts/: reorganize.py
backup/prompts_backup_Pickleball-Vision-LLM/tests/: test_analyzers.py  test_colors.py
code/: PaddlePickleballDownloader.py  PickleballObjectDetector.py  VideoFrameExtractor.py
code/dir_creation/: project.py  project_mgmt.py
config/config/: config.yaml
data/: video_metadata.csv
deployment/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  requirements.txt
deployment/monitoring/alertmanager/: alertmanager.yml
deployment/monitoring/prometheus/: prometheus.yml
deployment/scripts/: setup-monitoring.sh
docker/docker/: docker-compose.yml
docs/: ARCHITECTURE.md  BUDGET_PLAN.md  DELIVERY_PLAN.md  DEMO_ACCESS.md  GETTING_STARTED.md  INFRA_SCALING.md  MODELS_AND_REUSE.md  PLAN.md  PROJECT_SUMMARY.md  REMEDIATION_PLAN.md  ROADMAP.md  SETUP.md  STATUS.md  TASKS.md  pickleball_vision.md
docs/adr/: 0001-flask-over-fastapi.md  0002-rule-default-llm-fallback.md  0003-cloud-llm-bedrock-not-openai.md  0004-reuse-oss-not-reinvent.md  0005-managed-stack.md  0006-fastapi-over-flask.md  0007-direct-to-storage-upload.md  README.md
docs/api/: README.md
docs/docs_roboflow/: data_links.md
docs/inspiration/pb-vision/: README.mdx  build-mapping.mdx  features.mdx  metrics-catalog.mdx  skill-rating.mdx
docs/specs/: PRD-pickleball-vision.md  README.md  RESEARCH_NOTES.md  RFC-001-video-analysis-pipeline.md  RFC-002-aws-infrastructure.md  RFC-003-managed-stack.md  TEMPLATE_PRD.md  TEMPLATE_RFC.md
docs/technical/: README.md
docs/thinking/: 2026-06-07-mini-features-backlog.md  2026-06-07-oss-reuse-iter1.md  2026-06-07-oss-reuse-plan.md  2026-06-07-p0-hardening-iter1.md  2026-06-07-video-product-architecture.md  2026-06-07-video-product-iter1.md
logs/evaluation/evaluation/: benchmark_metrics.py  confusion_matrix.py
requirements/: base.txt
root/: project_structure.yaml  pyproject.toml
root/docker/docker/: docker-compose.yml
scripts/: README.md  cleanup_and_move.py  final_cleanup.py  init_empty_files.py  organize_by_usage.py  reorganize_focused.py  restore_from_backup.py  scan_dir.py  seed_demo_users.py  smart_organizer.py
scripts/scripts/: run_mlflow_experiment.py  train_model.py
scripts/tests/: test_logger.py  test_visualizer.py
src/: README.md  main.py  pipeline.py
src/api/: __init__.py  validate.py
src/api/blueprints/: __init__.py  analyze.py  auth.py  jobs.py
src/core/: README.md
src/core/config/: __init__.py  config.py  settings.py
src/fusion/: README.md
src/integration/: README.md
src/llm/: README.md  __init__.py  clip_integration.py  generate_feedback.py  run_mlflow_experiment.py  video_llava_connector.py
src/services/: __init__.py  auth.py  db.py  gpu_gate.py  jobs.py
src/vision/: README.md
src/web/: README.md
supabase/migrations/: 0001_init.sql  0002_storage.sql
tests/: conftest.py  creation_result.json  test_analytics.py  test_app_phase0.py  test_billing_account_admin.py  test_collection.py  test_jobs_phase2.py  test_logging_admin.py  test_vision_analysis.py  test_worker_runner.py
web/: .env.example  README.md  middleware.ts  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: CoachingReport.tsx  JobProgress.tsx  Nav.tsx  QuotaMeter.tsx  StatusPill.tsx  UploadDropzone.tsx  ui.tsx
worker/: __init__.py  modal_app.py  runner.py
(+146 files in other folders)
