# pyproject.toml
[project]
name = "pickleball_llm"
version = "0.1.0"
description = "Multimodal LLM model for analyzing pickleball gameplay"
authors = [{ name = "Sathish Kumar", email = "SathishKumar786.ML@gmail.com" }]
dependencies = [
    "torch",
    "transformers",
    "opencv-python",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "numpy",
    "pydantic",
    "fastapi",
    "uvicorn",
    "pillow",
    "langchain",
    "openai",
    "pytube",
    "moviepy"
]
