[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pickleball-vision-llm"
version = "0.1.0"
description = "Multimodal AI system for pickleball gameplay analysis using computer vision and LLMs"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sathish Kumar", email = "sathishkumar786.ml@gmail.com" }]

# Core runtime (API control plane) — light; the heavy ML stack lives in [vision]
# and only runs inside the Modal worker.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyjwt[crypto]>=2.8",        # verify Supabase JWTs
    "httpx>=0.25",              # async HTTP (Supabase REST / JWKS)
    "python-multipart>=0.0.9",  # form uploads
    "supabase>=2.4",            # Supabase Python client (DB/storage/auth admin)
    "modal>=0.64",             # serverless GPU dispatch
    "stripe>=9.0",             # billing
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "tqdm>=4.66",
    # NOTE: flask is being removed as the API migrates to FastAPI (src/api is legacy).
    "flask>=3.0",
]

[project.optional-dependencies]
# Vision pipeline (YOLO / MediaPipe / OpenCV). Pulls torch — install on demand.
vision = [
    "opencv-python>=4.8",
    "ultralytics>=8.0",
    "supervision>=0.20",   # ByteTrack tracking + annotators (don't reinvent)
    "inference>=0.9",       # Roboflow hosted/edge pickleball model inference
    "mediapipe>=0.10",
    "pillow>=10.0",
    "imagehash>=4.3",
    "scipy>=1.11",          # trajectory smoothing (savgol) + signal analysis
    "scikit-learn>=1.3",    # shot-classifier / skill-rating model heads
    "torch>=2.1",
    "torchvision>=0.16",
]
# LLM / feedback generation — local-first (HuggingFace). OSS, no external API.
llm = [
    "transformers>=4.40",
    "langchain>=0.1",
]
# Optional managed-cloud LLM backends (pick one). Opt-in only: paid API + per-call
# latency/cost + data leaves the box. Default backend is "rule"; canonical real
# backend is local "hf". OpenAI direct dependency dropped — use a cloud provider.
# See docs/BUDGET_PLAN.md.
bedrock = [
    "boto3>=1.34",                      # AWS Bedrock (Claude) — default cloud provider
]
azure = [
    "openai>=1.0",                      # Azure OpenAI / Azure AI uses the openai SDK
]
vertex = [
    "google-cloud-aiplatform>=1.40",   # Google Vertex AI (Gemini)
]
# Experiment tracking + serving.
mlops = [
    "mlflow>=2.10",
    "uvicorn>=0.27",
    "fastapi>=0.110",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.6",
]

[project.scripts]
pickleball = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
